# better-deep-wiki

./: .env.bak  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENCE  README.md  docker-compose.dev.yml  docker-compose.yml  reverse-proxy.conf  roadmap.md  test.md
better-deep-wiki-ui/: package-lock.json  package.json
better-deep-wiki-ui/src/: as400.css  service.ts
better-deep-wiki-ui/src/components/: Sidebar.tsx
better-deep-wiki-ui/src/routes/: embedding.tsx  index.tsx
better-deep-wiki-ui/src/routes/ask/: $repo.tsx
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: Markdown.css  as400.css  main.tsx  routeTree.gen.ts  service.ts
frontend/src/components/: InstructionInput.tsx  Sidebar.tsx
frontend/src/routes/: __root.tsx  embedding.tsx  index.tsx
frontend/src/routes/ask/: $repo.tsx
src/: api.rs  chatter.rs  chunk_writter.rs  chunking.rs  config.rs  embedding.rs  intelligent_chunking.rs  lib.rs  main.rs  parsing.rs  types.rs  utils.rs  vector_store.rs
