[package]
name = "better-deep-wiki"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bincode = "1.3"
clap = { version = "4.5.39", features = ["derive"] }
ignore = "0.4.23"
rayon = "1.10.0"
reqwest = {  version =  "0.12.19" , features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tiktoken-rs = "0.7.0"
walkdir = "2.5.0"
