[package]
name = "better-deep-wiki"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.39", features = ["derive"] }
dotenvy = "0.15.7"
ignore = "0.4.23"
rayon = "1.10.0"
reqwest = {  version =  "0.12.19" , features = ["json", "rustls-tls"] }
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
tiktoken-rs = "0.7.0"
tokio = "1.45.1"
uuid = { version ="1.17.0", features = ["v4"] }
walkdir = "2.5.0"
